Fix gradle issues