@@ -10,28 +10,20 @@ buildscript {
 
 plugins {
     id 'application'
+    id "org.springframework.boot" version '2.1.0.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'se.patrikerdes.use-latest-versions' version '0.2.7'
     id 'com.github.ben-manes.versions' version '0.20.0'
     id 'org.sonarqube' version '2.7'
     id 'jacoco'
-    id "com.github.kt3k.coveralls" version "2.8.2"
-    id 'io.franzbecker.gradle-lombok' version '2.0'
+    id 'idea'
+    id 'eclipse'
+    id 'com.github.kt3k.coveralls' version "2.8.2"
     id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
-    id "info.solidsoft.pitest" version '1.5.1' apply(false)
-    id "org.jetbrains.gradle.plugin.idea-ext" version "0.7"
+    id 'info.solidsoft.pitest' version '1.5.1' apply(false)
+    id 'org.jetbrains.gradle.plugin.idea-ext' version "0.7"
     id 'uk.gov.hmcts.java' version '0.12.43'
 }
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'application'
-apply plugin: "org.sonarqube"
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'com.github.ben-manes.versions'
-apply plugin: 'se.patrikerdes.use-latest-versions'
 
 mainClassName = 'uk.gov.hmcts.ccd.definition.store.CaseDataAPIApplication'
 
@@ -60,7 +52,7 @@ ext {
     springCloudVersion = '2021.0.3'
     springfoxSwaggerVersion = '3.0.0'
     hamcrestVersion = '1.3'
-    powermockVersion = '2.0.0-beta.5'
+    powermockVersion = '2.0.9'
     reformLogging= '5.1.9'
     restAssuredVersion = '4.3.0!!'
     groovyVersion = '3.0.17!!'
@@ -157,20 +149,6 @@ java {
     }
 }
 
-configurations.configureEach {
-    resolutionStrategy {
-        eachDependency { details ->
-            if (details.requested.group == 'org.projectlombok' && details.requested.name == 'lombok') {
-                details.useVersion '1.18.28'
-            }
-        }
-    }
-
-    tasks.withType(Copy).configureEach {
-        duplicatesStrategy 'exclude'
-    }
-}
-
 jacoco {
     toolVersion = "0.8.8"
 }
@@ -185,7 +163,6 @@ subprojects { subproject ->
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'jacoco'
     apply plugin: "com.github.kt3k.coveralls"
-    apply plugin: 'io.franzbecker.gradle-lombok'
     apply plugin: 'uk.gov.hmcts.java'
 
     configurations {
@@ -194,6 +171,16 @@ subprojects { subproject ->
         aatCompile.extendsFrom(testImplementation)
         aatRuntime.extendsFrom(testRuntimeOnly)
         cucumberRuntime.extendsFrom(functionalRuntime)
+    }
+
+    tasks.withType(Test).configureEach{
+        // Added to handle Powermockito issues
+        jvmArgs = jvmArgs + [
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens=java.base/sun.security.action=ALL-UNNAMED'
+        ]
     }
 
     dependencyUpdates.resolutionStrategy = {
@@ -227,6 +214,12 @@ subprojects { subproject ->
         implementation (group: 'com.github.hmcts', name: 'idam-java-client', version: '2.0.1') {
             exclude group: 'com.google.guava', module: 'guava'
         }
+
+        compileOnly 'org.projectlombok:lombok:1.18.28'
+        annotationProcessor 'org.projectlombok:lombok:1.18.28'
+
+        testCompileOnly 'org.projectlombok:lombok:1.18.28'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
 
         implementation "org.springframework.security:spring-security-web"
         implementation "org.springframework.security:spring-security-config"
@@ -493,7 +486,7 @@ dependencies {
     codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
 }
 task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
-    main = "com.codacy.CodacyCoverageReporter"
+    mainClass = "com.codacy.CodacyCoverageReporter"
     classpath = configurations.codacy
     args = [
             "report",
@@ -505,7 +498,7 @@ task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
 }
 
 task fortifyScan(type: JavaExec)  {
-    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
     classpath += sourceSets.test.runtimeClasspath
     jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
     // The line below prevents the build from failing if the Fortify scan detects issues
@@ -527,7 +520,7 @@ task reloadEnvSecrets {
 }
 
 task runRemoteDemo(type: JavaExec) {
-    main = mainClassName
+    mainClass = mainClassName
     classpath = sourceSets.main.runtimeClasspath
     doFirst() {
         configRemoteRunTask(it, 'demo')
